@@ -1,9 +1,6 @@
 prefix=@prefix@
 sysconfdir=@sysconfdir@
 porgrc=${sysconfdir}/porgrc
-logdir=@LOGDIR@
-include=@INCLUDE@
-exclude=@EXCLUDE@
 
 Name: porg
 Description: Source code package organizer
